deps/css/main.css
:root {
    --light: #90f6d7;
    --green: #35bcbf;
    --gray: #41506b;
    --dark: #263849;
    --dark_blue: #222b48;
    --alert: #C11919;
    --sombra_azul: #35bcbf30;
}

* {
    box-sizing: border-box;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

body {
    margin: 0;
    background: var(--dark);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-inline: auto;
    max-width: 1200px;
    padding: 8px;
    gap: 8px;
}

.panel {
    aspect-ratio: 1;
    height: 50px;
    background: #00000030;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0;
    margin: 0;
    color: var(--green);
    box-shadow: 0 0 5px 1px var(--sombra_azul);
    cursor: pointer;
}

.formulario {
    padding: 20px;
    background: var(--gray);
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 15px;
    width: 310px;
    overflow: auto;
    box-shadow: 0 0 10px 1px #00000030;
}

input,
textarea,
select {
    outline: none;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 18px;
    color: aliceblue;
    padding: 8px;
    border: none;
    background: none;
    border-bottom: 2px solid var(--green);
    caret-color: var(--green);
    accent-color: var(--green);
    transition: all 300ms ease;
}

select option {
    background-color: var(--dark);
}

textarea {
    border: 2px solid var(--green);
}

textarea:focus {
    border: 2px solid var(--light);
}

input:focus,
select:focus {
    border-bottom: 2px solid var(--light);
}

input.wrong_value,
select.wrong_value {
    border-bottom: 2px solid var(--alert);
}

textarea.wrong_value {
    border: 2px solid var(--alert);
}

select {
    text-align: center;
}

#inp_asignatura {
    display: none;
}

#inp_cuerpo {
    resize: none;
    min-width: 200px;
    min-height: 300px;
    border-radius: 10px;
}

#inp_btn {
    position: relative;
    background: var(--green);
    padding: 8px 12px;
    border: none;
    border-radius: 15px;
    color: #000000;
    font-weight: 700;
    font-size: 18px;
    cursor: pointer;
    overflow: hidden;
    box-shadow: 0 0 5px 1px var(--sombra_azul);
    z-index: 5;
}

#inp_btn>span {
    position: relative;
    z-index: 7;
}

#inp_btn::after {
    position: absolute;
    content: "";
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100px;
    height: 100px;
    background: var(--light);
    clip-path: circle(0%);
    z-index: 6;
    transition: all 300ms ease;
    overflow: hidden;
}

#inp_btn:hover::after {
    clip-path: circle(100%);
}

.normas {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 4px;
    color: #ededed;
    font-size: 14px;

    & .signo {
        font-weight: 700;
        width: 20px;
        height: 20px;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 50%;
        border: 1.5px solid #ededed;

    }
}

.drop-area {
    border: 1.5px dashed var(--green);
    width: 90%;
    border-radius: 10px;
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 8px;
    font-size: 14px;
    transition: all 300ms ease;


    & .add_file {
        position: relative;
        z-index: 4;
        border: none;
        background: var(--green);
        outline: none;
        color: black;
        padding: 5px 8px;
        font-weight: 600;
        border-radius: 20px;
        cursor: pointer;
        transition: all 300ms ease;
        overflow: hidden;
        box-shadow: 0 0 5px 1px var(--sombra_azul);

        & span {
            z-index: 6;
            position: relative;
        }

        &::after {
            content: "";
            position: absolute;
            z-index: 5;
            top: 50%;
            left: -10px;
            transform: translate(-50%, -50%);
            width: 10px;
            height: 50px;
            background: var(--light);
            transition: all 300ms ease;
        }

        &:hover::after {
            width: 300px;
        }
    }

    & .preview {
        width: 220px;
        height: fit-content;
        background: var(--dark_blue);
        color: aliceblue;
        display: flex;
        justify-content: center;
        align-items: center;
        grid-template-columns: 40px 1fr 40px;
        gap: 8px;
        padding: 10px;
        border-radius: 15px;
        box-shadow: 0 0 5px 1px #00000030;
        overflow: hidden;

        & img {
            width: 40px;
            height: 40px;
            border-radius: 10px;
        }

        &>span {
            flex: 1;
            max-width: 90%;
            /* Asegura que el span no se expanda más allá de su contenedor */
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            font-size: 16px;
            font-weight: 500;
        }
    }
}

.drop-area.active {
    border: 2px dashed var(--light);
    background: #90f6d730;
}

.upload_status {
    width: 40px;
    height: 40px;
    aspect-ratio: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.loader {
    width: 30px;
    aspect-ratio: 1;
    display: grid;
    border: 4px solid #0000;
    border-radius: 50%;
    border-right-color: var(--green);
    animation: l15 1s infinite linear;
}

.loader::before,
.loader::after {
    content: "";
    grid-area: 1/1;
    margin: 2px;
    border: inherit;
    border-radius: 50%;
    animation: l15 2s infinite;
}

.loader::after {
    margin: 8px;
    animation-duration: 3s;
}

@keyframes l15 {
    100% {
        transform: rotate(1turn)
    }
}

.check {
    box-sizing: content-box;
    display: inline-block;
    transform: rotate(45deg);
    height: 17px;
    width: 7px;
    border-bottom: 6px solid var(--green);
    border-right: 6px solid var(--green);
}

.xmark::before {
    content: '\2716';
    font-size: 30px;
    color: var(--alert);
}

.error {
    color: aliceblue;
    text-align: center;
    font-size: 18px;
    margin-top: 10px;
    margin-bottom: -10px;

    & span {
        color: var(--alert);
        letter-spacing: 1px;
        font-size: 19px;
        font-weight: 700;
    }

}

.sending {
    color: aliceblue;
    font-size: 18px;
    font-weight: 600;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

@media screen and (width >= 1000px) {
    .formulario {
        width: 800px;
        display: grid;
        grid-template-areas:
            "error error"
            "email normas"
            "motivo adjuntos"
            "queja adjuntos"
            "asignatura adjuntos"
            "titulo titulo"
            "cuerpo cuerpo"
            "enviar enviar"
        ;
    }

    #inp_email {
        grid-area: email;
    }

    #inp_motivo {
        grid-area: motivo;
    }

    #inp_queja {
        grid-area: queja;
    }

    #inp_asignatura {
        grid-area: asignatura;
    }

    #inp_titulo {
        grid-area: titulo;
    }

    #inp_cuerpo {
        grid-area: cuerpo;
    }

    #inp_btn {
        grid-area: enviar;
    }

    #inp_btn::after {
        width: 800px;
    }

    .normas {
        grid-area: normas;
    }

    .sending {
        grid-area: error;
    }

    .drop-area {
        grid-area: adjuntos;
        width: 100%;
        height: 100px;
        overflow: scroll;
        justify-content: flex-start;

        & .add_file {
            height: 27px;
            overflow: visible;

            &:hover {
                background-color: var(--light);
            }

            &::after {
                content: none;
            }
        }

        & .preview {
            height: 48px;
            overflow: visible;
        }
    }

    .error {
        grid-area: error;
    }
}

